<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/preference_user_name_key"
        android:title="@string/preference_user_name_title"
        android:summary="@string/preference_user_name_summary" />

    <EditTextPreference
        android:key="@string/preference_password_key"
        android:title="@string/preference_password_title"
        android:summary="@string/preference_password_summary"
        android:inputType="textPassword" />

    <ListPreference
        android:entries="@array/color_names"
        android:entryValues="@array/color_values"
        android:key="@string/preference_main_bg_key"
        android:title="@string/preference_main_bg_title"
        android:summary="@string/preference_main_bg_summary" />

    <yuku.ambilwarna.widget.AmbilWarnaPreference
        android:key="ambil_warna_key"
        android:defaultValue="0xff6699cc"
        android:title="Pick a Colour"
        android:summary="This will allow you to choose a colour for the background" />

</PreferenceScreen>