<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/linear_layout_post_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_post_chatter_title"
        android:layout_margin="12dp"
        android:layout_marginBottom="6dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text_view_post_title"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/edit_text_post_chatter"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/edit_text_post_background"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="6dp"
        android:hint="@string/edit_text_post_chatter_hint"
        android:gravity="top"
        />

    <Button
        android:id="@+id/button_post_chatter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="6dp"
        android:text="@string/button_post_chatter"
        android:textAllCaps="false"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/button_view_chatter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="6dp"
        android:text="@string/button_view_chatter"
        android:textAllCaps="false"
        android:textSize="16sp" />

</LinearLayout>